--- a/firecrackers/index.html
+++ b/firecrackers/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>jQuery新年放鞭炮动画代码</title>
+<title>吴丽欣专属鞭炮</title>
 
 <link href="css/style.css" rel="stylesheet">
 
